# goi-autosplitter

./: Cargo.toml  README.md
src/: lib.rs
