[package]
name = "goi-livesplit"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr.git", features = ["unity"]}
tokio = { version = "1.37.0", features = ["time"] }

[lib]
crate-type = ["cdylib"]
